--- a/POSSystem/.gitignore
+++ b/POSSystem/.gitignore
@@ -1,28 +1,23 @@
-# Java related
-target/**
-*.jar
-*.war
-*.ear
+# Compiled class file
 *.class
 
-# eclipse specific
-*.pydevproject
-.project
-.metadata
-bin/**
-tmp/**
-tmp/**/*
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
+# Log file
+*.log
 
-# External tool builders
-.externalToolBuilders/
+# BlueJ files
+*.ctxt
 
-# Locally stored "Eclipse launch configurations"
-*.launch
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
